--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-proxy": "^1.18.1"
   },
   "devDependencies": {
-    "forever": "^4.0.2"
+    "forever": "^4.0.2",
+    "marked": "^4.0.12"
   }
 }
